# DarwinBoot

./: .clang-format  .clangd  .gitignore  .gitmodules  BUILDING.md  CMakeLists.txt  FORMATTING.md  LICENSE  Makefile  README.md  TARGETS.md  VMQEMU.dts  format.sh  inittoolchain.sh  vmqemudt.dtb  xmake.lua
CoreDarwinBoot/: README.md
CoreDarwinBoot/Sources/: CPUInfo.c  Globals.c
CoreDarwinBoot/include/CoreDarwinBoot/: BootArgs.h  CDBBasicTypes.h  CPUInfo.h  CoreDarwinBoot.h  DeviceTree.h  MachO.h
CoreDarwinBoot/include/CorePlatform/: Driver.h
DarwinBoot.xcodeproj/: project.pbxproj
DarwinBoot/ARM/: CMakeLists.txt
DarwinBoot/ARM/CorePlatform/: CMakeLists.txt
DarwinBoot/CoreDarwinBoot/: BootArgs.c  Common.c  Crypto.cpp  DeviceTree.c  EFIInterface.cpp  Globals.c  Init.c  Kernel.c  Object.cpp  Runtime.c  Runtime.cpp  cms.c  panic.c
DarwinBoot/CoreDarwinBoot/ACPI/: ACPIGlobals.c
DarwinBoot/CoreDarwinBoot/ARM/: CPUInfo.c
DarwinBoot/CoreHFS/core/: core.c
DarwinBoot/JumpStart/: main.c
DarwinBoot/UEFI/: CMakeLists.txt
DarwinBoot/include/: assert.h  builtins.h  cms.h  ctype.h  errno.h  inttypes.h  libcxxabi.h  limits.h  malloc.h  panic.h  stdarg.h  stdbool.h  stddef.h  stdint.h  stdio.h  stdlib.h  string.h  wchar.h
cmake/: toolchain-llvm.cmake
cmake/Configs/: BCM2711.cmake  BCM2712.cmake  VMQEMU.cmake  x86_64.cmake
configs/: bcm2711.lua  bcm2712.lua  bcm2837.lua  integratorcp.lua  vmqemu.lua
targets/ARM/: DarwinBootS1.lua
targets/UEFI/: CoreCryptoDxe.lua  DiskBoot.lua  EFIJumpStart.lua
toolchains/: arm-eabi.lua  arm-elf.lua  uefi-dxe.lua  uefi.lua
(+315 files in other folders)
